--- a/env-dev/catalogue.yaml
+++ b/env-dev/catalogue.yaml
@@ -1,3 +1,9 @@
 appName: catalogue
 containerPort: 8080
 serviceType: ClusterIP
+configMap_data:
+  MONGO: true
+  MONGO_URL: "mongodb://mongodb-dev.yourtherapist.in:27017/catalogue"
+  DB_TYPE: mongo
+  APP_GIT_URL: https://github.com/roboshop-devops-project-v3/catalogue
+  DB_HOST: mongodb-dev.yourtherapist.in
