--- a/env-dev/shipping.yaml
+++ b/env-dev/shipping.yaml
@@ -1,3 +1,10 @@
 appName: shipping
 containerPort: 8080
 serviceType: ClusterIP
+configMap_data:
+  CART_ENDPOINT: cart:8080
+  DB_HOST: mysql-dev.yourtherapist.in
+  DB_TYPE: mysql
+  APP_GIT_URL: https://github.com/roboshop-devops-project-v3/shipping
+  DB_USER: root
+  DB_PASS: RoboShop@1
