--- a/env-dev/payment.yaml
+++ b/env-dev/payment.yaml
@@ -1,3 +1,11 @@
 appName: payment
 containerPort: 8080
 serviceType: ClusterIP
+configMap_data:
+  CART_HOST: cart
+  CART_PORT: 8080
+  USER_HOST: user
+  USER_PORT: 8080
+  AMQP_HOST: rabbitmq-dev.yourtherapist.in
+  AMQP_USER: roboshop
+  AMQP_PASS: roboshop123
