--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -19,7 +19,6 @@ spec:
           image: public.ecr.aws/w8x4g9h7/roboshop-v3/{{ .Values.appName }}
           ports:
             - containerPort: {{ .Values.containerPort }}
-#          envFrom:
-#            - secretRef:
-#                name: {{ .Values.appName }}
-#
+          envFrom:
+            - secretRef:
+               name: {{ .Values.appName }}
