--- a/templates/db-job.yaml
+++ b/templates/db-job.yaml
@@ -1,19 +1,22 @@
-{{/*{{ if .Values.db_job.enabled }}*/}}
-{{/*apiVersion: batch/v1*/}}
-{{/*kind: Job*/}}
-{{/*metadata:*/}}
-{{/*  name: {{ .Values.appName }}-db-job*/}}
-{{/*  labels:*/}}
-{{/*    app: {{ .Values.appName }}*/}}
-{{/*spec:*/}}
-{{/*  template:*/}}
-{{/*    spec:*/}}
-{{/*      containers:*/}}
-{{/*        - name: db*/}}
-{{/*          image: public.ecr.aws/w8x4g9h7/roboshop-v3/schema-load*/}}
-{{/*          envFrom:*/}}
-{{/*            - configMapRef:*/}}
-{{/*                name: {{ .Values.appName }}*/}}
-{{/*      restartPolicy: Never*/}}
-{{/*  backoffLimit: 0*/}}
-{{/*{{ end }}*/}}
+{{- if .Values.db_job.enabled }}
+apiVersion: batch/v1
+kind: Job
+metadata:
+  name: {{ .Values.appName }}-db-job
+  labels:
+    app: {{ .Values.appName }}
+spec:
+  template:
+    metadata:
+      labels:
+        app: {{ .Values.appName }}     # Optional but recommended
+    spec:
+      containers:
+        - name: db
+          image: public.ecr.aws/w8x4g9h7/roboshop-v3/schema-load
+          envFrom:
+            - configMapRef:
+                name: {{ .Values.appName }}
+      restartPolicy: Never
+  backoffLimit: 0
+{{- end }}
