--- a/templates/db-job.yaml
+++ b/templates/db-job.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.db_job.enabled }}
+{{ if .Values.db_job.enabled }}
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -7,11 +7,8 @@ metadata:
     app: {{ .Values.appName }}
 spec:
   template:
-    metadata:
-      labels:
-        app: {{ .Values.appName }}     # Optional but recommended
-    spec:
-      containers:
+     spec:
+       containers:
         - name: db
           image: public.ecr.aws/w8x4g9h7/roboshop-v3/schema-load
           envFrom:
