--- a/env-dev/catalogue.yaml
+++ b/env-dev/catalogue.yaml
@@ -7,7 +7,10 @@ configMap_data:
   DB_TYPE: mongo
   APP_GIT_URL: https://github.com/roboshop-devops-project-v3/catalogue
   DB_HOST: mongodb-dev.yourtherapist.in
-  SCHEMA_FILE: db/master-data.js
+
 
 db_job:
     enabled: true
+    ext: js
+    jobs:
+      - master-data
