--- a/env-dev/shipping.yaml
+++ b/env-dev/shipping.yaml
@@ -8,3 +8,9 @@ configMap_data:
   APP_GIT_URL: https://github.com/roboshop-devops-project-v3/shipping
   DB_USER: root
   DB_PASS: RoboShop@1
+
+db_job:
+  enabled: true
+  ext: sql
+  jobs:
+    - master-data
