--- a/templates/db-job.yaml
+++ b/templates/db-job.yaml
@@ -2,12 +2,13 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{ .Values.appName }}-db-job
+  generateName: {{ .Values.appName }}-db-job-
   labels:
     app: {{ .Values.appName }}
 spec:
   template:
     spec:
+      restartPolicy: Never
       containers:
       {{- range .Values.db_job.jobs }}
         - name: {{ . }}
@@ -19,6 +20,5 @@ spec:
             - configMapRef:
                 name: {{ $.Values.appName }}
       {{- end }}
-      restartPolicy: Never
   backoffLimit: 0
 {{- end }}
