--- a/env-dev/cart.yaml
+++ b/env-dev/cart.yaml
@@ -1,3 +1,4 @@
+env: dev
 appName: cart
 containerPort: 8080
 serviceType: ClusterIP
@@ -5,3 +6,11 @@ configMap_data:
   CATALOGUE_HOST: catalogue
   CATALOGUE_PORT: "8080"
   REDIS_HOST: redis-dev.yourtherapist.in
+
+resources:
+  requests:
+    memory: "64Mi"
+    cpu: "30m"
+  limits:
+    memory: "128Mi"
+    cpu: "100m"
