--- a/env-dev/payment.yaml
+++ b/env-dev/payment.yaml
@@ -9,3 +9,11 @@ configMap_data:
   AMQP_HOST: rabbitmq-dev.yourtherapist.in
   AMQP_USER: roboshop
   AMQP_PASS: roboshop123
+
+resources:
+  requests:
+    memory: "64Mi"
+    cpu: "50m"
+  limits:
+    memory: "12Mi"
+    cpu: "100m"
