--- a/env-dev/shipping.yaml
+++ b/env-dev/shipping.yaml
@@ -22,7 +22,7 @@ db_job:
 resources:
   requests:
     memory: "20i"
-    cpu: "15"
-  limits:
-    memory: "30Mi"
-    cpu: "20m"
+#    cpu: "15"
+#  limits:
+#    memory: "30Mi"
+#    cpu: "20m"
