--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: {{ .Values.appName }}
-          image: public.ecr.aws/w8x4g9h7/roboshop-v3/{{ .Values.appName }}
+          image: golive.azurecr.io/roboshop-/{{ .Values.appName }}:{{ .Values.appTag }}
           ports:
             - containerPort: {{ .Values.containerPort }}
           envFrom:
